--- a/CHCloudHealth/Base.lproj/Login.storyboard
+++ b/CHCloudHealth/Base.lproj/Login.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Alo-WS-rGB">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15F18b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Alo-WS-rGB">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -263,7 +263,9 @@
                             <constraint firstItem="kfl-Ze-1qY" firstAttribute="leading" secondItem="A5h-ae-7br" secondAttribute="leadingMargin" constant="27" id="06W-kO-tud"/>
                             <constraint firstAttribute="trailingMargin" secondItem="n4s-Aq-ids" secondAttribute="trailing" constant="99" id="0CS-nW-GDW"/>
                             <constraint firstItem="zSJ-ht-7ux" firstAttribute="top" secondItem="kfl-Ze-1qY" secondAttribute="bottom" constant="8" id="4va-rw-pdh"/>
-                            <constraint firstItem="9we-hW-Zvh" firstAttribute="top" secondItem="0Fn-zz-uuu" secondAttribute="bottom" constant="8" id="5EM-Kp-vTA"/>
+                            <constraint firstItem="9we-hW-Zvh" firstAttribute="top" secondItem="0Fn-zz-uuu" secondAttribute="bottom" constant="8" id="5EM-Kp-vTA">
+                                <variation key="widthClass=compact" constant="15"/>
+                            </constraint>
                             <constraint firstItem="kjh-Ld-T3S" firstAttribute="leading" secondItem="A5h-ae-7br" secondAttribute="leadingMargin" constant="27" id="5ic-Im-RrO"/>
                             <constraint firstItem="wsw-OW-gIF" firstAttribute="top" secondItem="3xd-1h-bsa" secondAttribute="bottom" id="6Ay-7F-OeM"/>
                             <constraint firstAttribute="trailingMargin" secondItem="hp0-Ib-FVK" secondAttribute="trailing" constant="-20" id="6kY-Hu-aMh"/>
@@ -317,34 +319,34 @@
                                 <exclude reference="9we-hW-Zvh"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="K19-4G-eny"/>
-                                <exclude reference="Yyy-Od-1nt"/>
-                                <exclude reference="tY7-5T-Pqz"/>
-                                <exclude reference="QOI-cd-ObL"/>
-                                <exclude reference="i2z-Xt-NhZ"/>
-                                <exclude reference="0CS-nW-GDW"/>
-                                <exclude reference="BAT-d1-ZYZ"/>
-                                <exclude reference="NrO-4g-Gwi"/>
-                                <exclude reference="RcH-pb-GQP"/>
-                                <exclude reference="hnu-Lp-2ba"/>
-                                <exclude reference="tfF-1B-w5l"/>
+                                <exclude reference="6Ay-7F-OeM"/>
+                                <exclude reference="fW2-0h-yUv"/>
                                 <exclude reference="06W-kO-tud"/>
                                 <exclude reference="8GQ-hi-vMP"/>
                                 <exclude reference="LUG-2Y-Wtg"/>
-                                <exclude reference="5ic-Im-RrO"/>
-                                <exclude reference="bac-H2-ePb"/>
-                                <exclude reference="4va-rw-pdh"/>
-                                <exclude reference="fam-Yt-gBf"/>
+                                <exclude reference="RcH-pb-GQP"/>
+                                <exclude reference="hnu-Lp-2ba"/>
+                                <exclude reference="tfF-1B-w5l"/>
                                 <exclude reference="8T7-zW-RTq"/>
                                 <exclude reference="Eum-N6-iDi"/>
                                 <exclude reference="va3-PK-yPz"/>
+                                <exclude reference="QOI-cd-ObL"/>
+                                <exclude reference="i2z-Xt-NhZ"/>
                                 <exclude reference="5EM-Kp-vTA"/>
                                 <exclude reference="BU0-SW-cmT"/>
                                 <exclude reference="CPR-PX-uZA"/>
                                 <exclude reference="6kY-Hu-aMh"/>
                                 <exclude reference="cxu-oI-V2j"/>
-                                <exclude reference="6Ay-7F-OeM"/>
-                                <exclude reference="fW2-0h-yUv"/>
+                                <exclude reference="5ic-Im-RrO"/>
+                                <exclude reference="bac-H2-ePb"/>
+                                <exclude reference="4va-rw-pdh"/>
+                                <exclude reference="fam-Yt-gBf"/>
+                                <exclude reference="K19-4G-eny"/>
+                                <exclude reference="Yyy-Od-1nt"/>
+                                <exclude reference="tY7-5T-Pqz"/>
+                                <exclude reference="0CS-nW-GDW"/>
+                                <exclude reference="BAT-d1-ZYZ"/>
+                                <exclude reference="NrO-4g-Gwi"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -361,34 +363,34 @@
                                 <include reference="9we-hW-Zvh"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="K19-4G-eny"/>
-                                <include reference="Yyy-Od-1nt"/>
-                                <include reference="tY7-5T-Pqz"/>
-                                <include reference="QOI-cd-ObL"/>
-                                <include reference="i2z-Xt-NhZ"/>
-                                <include reference="0CS-nW-GDW"/>
-                                <include reference="BAT-d1-ZYZ"/>
-                                <include reference="NrO-4g-Gwi"/>
-                                <include reference="RcH-pb-GQP"/>
-                                <include reference="hnu-Lp-2ba"/>
-                                <include reference="tfF-1B-w5l"/>
+                                <include reference="6Ay-7F-OeM"/>
+                                <include reference="fW2-0h-yUv"/>
                                 <include reference="06W-kO-tud"/>
                                 <include reference="8GQ-hi-vMP"/>
                                 <include reference="LUG-2Y-Wtg"/>
-                                <include reference="5ic-Im-RrO"/>
-                                <include reference="bac-H2-ePb"/>
-                                <include reference="4va-rw-pdh"/>
-                                <include reference="fam-Yt-gBf"/>
+                                <include reference="RcH-pb-GQP"/>
+                                <include reference="hnu-Lp-2ba"/>
+                                <include reference="tfF-1B-w5l"/>
                                 <include reference="8T7-zW-RTq"/>
                                 <include reference="Eum-N6-iDi"/>
                                 <include reference="va3-PK-yPz"/>
+                                <include reference="QOI-cd-ObL"/>
+                                <include reference="i2z-Xt-NhZ"/>
                                 <include reference="5EM-Kp-vTA"/>
                                 <include reference="BU0-SW-cmT"/>
                                 <include reference="CPR-PX-uZA"/>
                                 <include reference="6kY-Hu-aMh"/>
                                 <include reference="cxu-oI-V2j"/>
-                                <include reference="6Ay-7F-OeM"/>
-                                <include reference="fW2-0h-yUv"/>
+                                <include reference="5ic-Im-RrO"/>
+                                <include reference="bac-H2-ePb"/>
+                                <include reference="4va-rw-pdh"/>
+                                <include reference="fam-Yt-gBf"/>
+                                <include reference="K19-4G-eny"/>
+                                <include reference="Yyy-Od-1nt"/>
+                                <include reference="tY7-5T-Pqz"/>
+                                <include reference="0CS-nW-GDW"/>
+                                <include reference="BAT-d1-ZYZ"/>
+                                <include reference="NrO-4g-Gwi"/>
                             </mask>
                         </variation>
                     </view>
