--- a/CHCloudHealth/Base.lproj/Main.storyboard
+++ b/CHCloudHealth/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15F18b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ij2-Za-dBx">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ij2-Za-dBx">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -594,6 +594,7 @@
                     </view>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
+                        <outlet property="tableView" destination="Hqk-lI-4cl" id="PVy-5b-41X"/>
                         <segue destination="8ng-8Z-7PC" kind="show" id="17h-B9-SgV"/>
                     </connections>
                 </viewController>
@@ -1318,20 +1319,20 @@
                                                     <exclude reference="ceM-3P-wCz"/>
                                                 </mask>
                                                 <mask key="constraints">
-                                                    <exclude reference="8EV-lL-HQD"/>
-                                                    <exclude reference="AO2-5f-UhB"/>
-                                                    <exclude reference="5vI-Sx-KqJ"/>
-                                                    <exclude reference="c6h-p7-HWd"/>
+                                                    <exclude reference="FQf-np-NTn"/>
+                                                    <exclude reference="KdG-qf-KNC"/>
+                                                    <exclude reference="LDB-ZL-Zoe"/>
+                                                    <exclude reference="p5u-L2-nKe"/>
                                                     <exclude reference="EDZ-g6-Rn2"/>
                                                     <exclude reference="bKT-hR-TEr"/>
                                                     <exclude reference="53V-at-gZa"/>
                                                     <exclude reference="Joq-xP-gy9"/>
                                                     <exclude reference="NP2-Ov-VUf"/>
                                                     <exclude reference="V6u-ba-kcS"/>
-                                                    <exclude reference="FQf-np-NTn"/>
-                                                    <exclude reference="KdG-qf-KNC"/>
-                                                    <exclude reference="LDB-ZL-Zoe"/>
-                                                    <exclude reference="p5u-L2-nKe"/>
+                                                    <exclude reference="8EV-lL-HQD"/>
+                                                    <exclude reference="AO2-5f-UhB"/>
+                                                    <exclude reference="5vI-Sx-KqJ"/>
+                                                    <exclude reference="c6h-p7-HWd"/>
                                                 </mask>
                                             </variation>
                                             <variation key="widthClass=compact">
@@ -1343,20 +1344,20 @@
                                                     <include reference="ceM-3P-wCz"/>
                                                 </mask>
                                                 <mask key="constraints">
-                                                    <include reference="8EV-lL-HQD"/>
-                                                    <include reference="AO2-5f-UhB"/>
-                                                    <include reference="5vI-Sx-KqJ"/>
-                                                    <include reference="c6h-p7-HWd"/>
+                                                    <include reference="FQf-np-NTn"/>
+                                                    <include reference="KdG-qf-KNC"/>
+                                                    <include reference="LDB-ZL-Zoe"/>
+                                                    <include reference="p5u-L2-nKe"/>
                                                     <include reference="EDZ-g6-Rn2"/>
                                                     <include reference="bKT-hR-TEr"/>
                                                     <include reference="53V-at-gZa"/>
                                                     <include reference="Joq-xP-gy9"/>
                                                     <include reference="NP2-Ov-VUf"/>
                                                     <include reference="V6u-ba-kcS"/>
-                                                    <include reference="FQf-np-NTn"/>
-                                                    <include reference="KdG-qf-KNC"/>
-                                                    <include reference="LDB-ZL-Zoe"/>
-                                                    <include reference="p5u-L2-nKe"/>
+                                                    <include reference="8EV-lL-HQD"/>
+                                                    <include reference="AO2-5f-UhB"/>
+                                                    <include reference="5vI-Sx-KqJ"/>
+                                                    <include reference="c6h-p7-HWd"/>
                                                 </mask>
                                             </variation>
                                         </tableViewCellContentView>
